[project]
name = "vapoursynth-oxidctf"
version = "0.0.0"
description = "DCT/IDCT frequency suppressor VapourSynth plugin."
readme = "README.md"
license = "MPL-2.0"
license-files = ["LICENSE.txt"]
requires-python = ">=3.12"

dependencies = ["vapoursynth>=77"]

[build-system]
requires = ["hatchling==1.31.0", "packaging==26.2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["vapoursynth/plugins/oxidctf"]
artifacts = [
    "vapoursynth/plugins/oxidctf/*.dylib",
    "vapoursynth/plugins/oxidctf/*.so",
    "vapoursynth/plugins/oxidctf/*.dll",
    "vapoursynth/plugins/oxidctf/manifest.vs",
]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.cibuildwheel]
build-frontend = "build[uv]"
build = "cp312-*"     # Only need to target the minimum Python version.
skip = [
    "*-musllinux_*",  # musl targets do not support cdylib by design.
    "*-win32",        # Not supported by VapourSynth.
]

[tool.cibuildwheel.linux]
before-all = "curl -sSf https://sh.rustup.rs | sh -s -- -y"
environment = "PATH=$HOME/.cargo/bin:$PATH"

[tool.cibuildwheel.macos.environment]
# VapourSynth's minimum macOS target is 13.0.
MACOSX_DEPLOYMENT_TARGET = "13.0"

[tool.cibuildwheel.windows]
archs = ["AMD64"]
before-all = "rustup target add x86_64-pc-windows-msvc"
